--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "@eslint/js": "^9.3.0",
     "eslint": "^9.3.0",
     "globals": "^15.2.0"
+  },
+  "dependencies": {
+    "firebase": "^10.12.1"
   }
 }
